--- a/index.html
+++ b/index.html
@@ -1,329 +1,238 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Merry Christmas</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Happy Birthday</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Baloo+2:wght@700&display=swap" rel="stylesheet">
 
 <style>
 html, body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  background: linear-gradient(#07192f, #0e2a47);
+  background: #3aa99e;
+  font-family: "Baloo 2", cursive;
 }
-canvas { display:block; }
+
+/* ===== 第一幕 ===== */
+#scene1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+/* 彩帶 */
+.ribbon {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 140px;
+  background: repeating-linear-gradient(
+    135deg,
+    #ff4d4d,
+    #ff4d4d 20px,
+    #ffd93d 20px,
+    #ffd93d 40px,
+    #4d96ff 40px,
+    #4d96ff 60px
+  );
+}
+
+/* ===== 蛋糕（正常蛋糕，大） ===== */
+#cake {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%;
+  height: 55%;
+}
+
+.layer {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #fff;
+  border-radius: 20px;
+}
+
+.layer.bottom {
+  bottom: 0;
+  width: 100%;
+  height: 35%;
+  background: #ffd6a5;
+}
+
+.layer.middle {
+  bottom: 30%;
+  width: 80%;
+  height: 30%;
+  background: #ffb5c2;
+}
+
+.layer.top {
+  bottom: 55%;
+  width: 60%;
+  height: 25%;
+  background: #caffbf;
+}
+
+/* 蠟燭 */
+.candle {
+  position: absolute;
+  top: -40px;
+  width: 16px;
+  height: 40px;
+  background: #ff595e;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.candle::after {
+  content: "";
+  position: absolute;
+  top: -14px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 14px;
+  height: 14px;
+  background: gold;
+  border-radius: 50%;
+}
+
+/* ===== 氣球（放大、不靠邊） ===== */
+.balloon {
+  position: absolute;
+  bottom: -150px;
+  width: 100px;
+  height: 130px;
+  border-radius: 50% 50% 50% 50%;
+  animation: floatUp linear infinite;
+}
+.balloon::after {
+  content: "";
+  position: absolute;
+  bottom: -25px;
+  left: 50%;
+  width: 3px;
+  height: 30px;
+  background: #555;
+}
+
+@keyframes floatUp {
+  from { transform: translateY(0); }
+  to { transform: translateY(-120vh); }
+}
+
+/* 點擊提示 */
+#hint {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 64px;
+  color: rgba(255,255,255,0.7);
+  display: none;
+}
+
+/* ===== 第二幕 ===== */
+#scene2 {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+#title {
+  margin-top: 5%;
+  font-family: "Great Vibes", cursive;
+  font-size: 120px;
+  color: #ffd700;
+  text-shadow: 3px 3px 8px rgba(0,0,0,0.4);
+}
+
+/* 祝福語（超大） */
+#message {
+  margin: 5% auto;
+  width: 90%;
+  font-size: 52px;
+  line-height: 1.6;
+  color: #ffdd55;
+  text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
+  white-space: pre-line;
+}
 </style>
 </head>
 
 <body>
-<canvas id="c"></canvas>
+
+<div id="scene1">
+  <div class="ribbon"></div>
+
+  <div id="cake">
+    <div class="layer bottom"></div>
+    <div class="layer middle"></div>
+    <div class="layer top">
+      <div class="candle"></div>
+    </div>
+  </div>
+
+  <div id="hint">點擊提示</div>
+</div>
+
+<div id="scene2">
+  <div id="title">Happy Birthday</div>
+  <div id="message"></div>
+</div>
 
 <script>
-const canvas = document.getElementById("c");
-const ctx = canvas.getContext("2d");
-
-function resize(){
-  canvas.width = innerWidth;
-  canvas.height = innerHeight;
+/* 氣球產生 */
+function createBalloon() {
+  const b = document.createElement("div");
+  b.className = "balloon";
+  b.style.left = (15 + Math.random() * 70) + "%";
+  b.style.background = `hsl(${Math.random()*360},80%,65%)`;
+  b.style.animationDuration = (8 + Math.random()*4) + "s";
+  document.getElementById("scene1").appendChild(b);
+  setTimeout(()=>b.remove(),12000);
 }
-resize();
-addEventListener("resize", resize);
+setInterval(createBalloon, 1200);
 
-// ❄ 雪
-const snow = Array.from({length:120},()=>({
-  x:Math.random()*canvas.width,
-  y:Math.random()*canvas.height,
-  r:Math.random()*2+1,
-  s:Math.random()*0.6+0.4
-}));
+/* 5 秒後顯示點擊提示 */
+setTimeout(()=>{
+  document.getElementById("hint").style.display="block";
+},5000);
 
-// 狀態
-let opened=false;
-let showBunny=false;
-let showFireworks=false;
-let flash=0;
-let secondClick=false;
+/* 點擊切換場景 */
+document.body.addEventListener("click", ()=>{
+  document.getElementById("scene1").style.display="none";
+  document.getElementById("scene2").style.display="block";
+  typeText();
+},{once:true});
 
-// ✨ 粒子
-const sparkles=[];
-const fireworks=[];
-const hearts=[];
+/* 打字效果 */
+const text = `鎔：
+一家團聚、慶生吃蛋糕
+最棒。
+一次生日是老了一歲，
+也是又長壽了一點的象徵。
+總之開心就好！
 
-// ✍️ 祝福文字（照你給的排版）
-const lines = [
-  "九千：",
-  "這是我和妳一起過的",
-  "第一個聖誕節，",
-  "希望我們的友誼",
-  "長長久久，",
-  "未來能給彼此更多",
-  "有趣的驚喜♡",
-  "",
-  "to.羊羊（2025/12/25）"
-];
+to奶奶（2026/1/1）`;
 
-let lineIndex = 0;
-let charIndex = 0;
-let showMessage = false;
-let textTimer = 0;
-
-// 點擊
-canvas.onclick = () => {
-  if (!opened) {
-    opened = true;
-    flash = 60;
-
-    for (let i=0;i<260;i++){
-      sparkles.push({
-        x:canvas.width/2,
-        y:canvas.height/2,
-        vx:Math.cos(Math.random()*Math.PI*2)*(4+Math.random()*6),
-        vy:Math.sin(Math.random()*Math.PI*2)*(4+Math.random()*6),
-        life:60
-      });
-    }
-
-    setTimeout(()=>showBunny=true,1000);
-    setTimeout(()=>showFireworks=true,4000);
-    setTimeout(()=>showBunny=false,4000);
-    return;
-  }
-
-  if (showFireworks && !secondClick) {
-    secondClick = true;
-    showMessage = true;
-  }
-};
-
-// 🎁 禮物
-function drawGift(){
-  if(opened) return;
-  const s=Math.min(canvas.width,canvas.height)*0.5;
-  const x=canvas.width/2-s/2;
-  const y=canvas.height/2-s/2;
-  ctx.fillStyle="#c62828";
-  ctx.fillRect(x,y,s,s);
-  ctx.fillStyle="#ffd54f";
-  ctx.fillRect(x+s/2-18,y,36,s);
-  ctx.fillRect(x,y+s/2-18,s,36);
-}
-
-// 🐰 兔子
-function drawBunny(){
-  if(!showBunny) return;
-  const x=canvas.width/2;
-  const y=canvas.height/2+80;
-  const r=Math.min(canvas.width,canvas.height)*0.22;
-
-  ctx.fillStyle="#fff";
-  ctx.beginPath();
-  ctx.arc(x,y,r,0,Math.PI*2);
-  ctx.fill();
-
-  ctx.beginPath();
-  ctx.ellipse(x-r/2.5,y-r*1.3,r/4,r/1.2,0,0,Math.PI*2);
-  ctx.ellipse(x+r/2.5,y-r*1.3,r/4,r/1.2,0,0,Math.PI*2);
-  ctx.fill();
-
-  ctx.fillStyle="#ffb6c1";
-  ctx.beginPath();
-  ctx.arc(x-r/6,y-r/12,r/16,0,Math.PI*2);
-  ctx.arc(x+r/6,y-r/12,r/16,0,Math.PI*2);
-  ctx.fill();
-
-  // 愛心生成
-  if (Math.random() < 0.08) {
-    hearts.push({
-      x:x+r*0.45,
-      y:y-r*1.4,
-      vy:-1,
-      life:80,
-      scale:1
-    });
+let i = 0;
+function typeText(){
+  if(i < text.length){
+    document.getElementById("message").textContent += text[i];
+    i++;
+    setTimeout(typeText, 200); // 每秒約 5 字
   }
 }
-
-// 💖 真・愛心
-function drawHearts(){
-  hearts.forEach(h=>{
-    h.y+=h.vy;
-    h.life--;
-    h.scale+=0.003;
-
-    ctx.save();
-    ctx.translate(h.x,h.y);
-    ctx.scale(h.scale,h.scale);
-    ctx.fillStyle=`rgba(255,140,170,${h.life/80})`;
-
-    ctx.beginPath();
-    ctx.arc(-6,-2,6,0,Math.PI*2);
-    ctx.arc(6,-2,6,0,Math.PI*2);
-    ctx.lineTo(0,12);
-    ctx.closePath();
-    ctx.fill();
-    ctx.restore();
-  });
-
-  for(let i=hearts.length-1;i>=0;i--){
-    if(hearts[i].life<=0) hearts.splice(i,1);
-  }
-}
-
-// 🎆 煙火
-function spawnFirework(){
-  const x=Math.random()*canvas.width;
-  const y=Math.random()*canvas.height*0.6;
-  const colors=["#ffd700","#ff6ec7","#7afcff","#b388ff","#fff176"];
-  for(let i=0;i<80;i++){
-    fireworks.push({
-      x,y,
-      vx:Math.cos(Math.random()*Math.PI*2)*(2+Math.random()*4),
-      vy:Math.sin(Math.random()*Math.PI*2)*(2+Math.random()*4),
-      life:80,
-      color:colors[Math.floor(Math.random()*colors.length)]
-    });
-  }
-}
-
-function drawFireworks(){
-  if(!showFireworks) return;
-  if(Math.random()<0.08) spawnFirework();
-
-  fireworks.forEach(f=>{
-    f.x+=f.vx;
-    f.y+=f.vy;
-    f.life--;
-    ctx.globalAlpha=f.life/80;
-    ctx.fillStyle=f.color;
-    ctx.beginPath();
-    ctx.arc(f.x,f.y,3,0,Math.PI*2);
-    ctx.fill();
-    ctx.globalAlpha=1;
-  });
-
-  for(let i=fireworks.length-1;i>=0;i--){
-    if(fireworks[i].life<=0) fireworks.splice(i,1);
-  }
-}
-
-// ✍️ 手寫文字
-function drawMessage(){
-  if(!showMessage) return;
-
-  textTimer++;
-  if(textTimer%4===0 && textIndex<message.length){
-    textIndex++;
-  }
-
-  ctx.font="28px serif";
-  ctx.textAlign="center";
-  ctx.fillStyle="rgba(255,215,150,0.95)";
-  ctx.shadowColor="rgba(255,215,150,0.8)";
-  ctx.shadowBlur=8;
-
-  ctx.fillText(
-    message.slice(0,textIndex),
-    canvas.width/2,
-    canvas.height*0.72
-  );
-
-  ctx.shadowBlur=0;
-}
-
-// ❄ 雪
-function drawSnow(){
-  ctx.fillStyle="#fff";
-  snow.forEach(s=>{
-    s.y+=s.s;
-    if(s.y>canvas.height) s.y=-10;
-    ctx.beginPath();
-    ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
-    ctx.fill();
-  });
-}
-
-// ✨ 金光
-function drawFlash(){
-  if(flash<=0) return;
-  flash--;
-  const g=ctx.createRadialGradient(
-    canvas.width/2,canvas.height/2,0,
-    canvas.width/2,canvas.height/2,canvas.width
-  );
-  g.addColorStop(0,`rgba(255,230,160,${flash/60})`);
-  g.addColorStop(1,"rgba(255,230,160,0)");
-  ctx.fillStyle=g;
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-}
-
-// ✨ 標題
-function drawTitle(){
-  if(!showFireworks) return;
-  ctx.font="96px 'Great Vibes'";
-  ctx.textAlign="center";
-  ctx.fillStyle="rgba(255,215,160,0.9)";
-  ctx.shadowColor="rgba(255,215,160,0.8)";
-  ctx.shadowBlur=15;
-  ctx.fillText("Merry Christmas",canvas.width/2,140);
-  ctx.shadowBlur=0;
-}
-
-// ✍️ 中央祝福文字（逐行寫出）
-function drawMessage(){
-  if(!showMessage) return;
-
-  textTimer++;
-  if(textTimer % 4 === 0){
-    if (lineIndex < lines.length) {
-      charIndex++;
-      if (charIndex > lines[lineIndex].length) {
-        lineIndex++;
-        charIndex = 0;
-      }
-    }
-  }
-
-  ctx.textAlign="center";
-  ctx.font="48px serif";
-  ctx.fillStyle="rgba(255,215,160,0.95)";
-  ctx.shadowColor="rgba(255,215,160,0.85)";
-  ctx.shadowBlur=12;
-
-  const startY = canvas.height/2 - 180;
-  const lineHeight = 60;
-
-  for (let i = 0; i < lineIndex; i++) {
-    ctx.fillText(lines[i], canvas.width/2, startY + i * lineHeight);
-  }
-
-  if (lineIndex < lines.length) {
-    ctx.fillText(
-      lines[lineIndex].slice(0, charIndex),
-      canvas.width/2,
-      startY + lineIndex * lineHeight
-    );
-  }
-
-  ctx.shadowBlur=0;
-}
-
-// 主迴圈
-function loop(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  drawSnow();
-  drawGift();
-  drawFlash();
-  drawBunny();
-  drawHearts();
-  drawFireworks();
-  drawTitle();
-  drawMessage();
-  requestAnimationFrame(loop);
-}
-loop();
 </script>
+
 </body>
 </html>
